Make sure the tabs in the getting started guide are centered on narrow screens.

--- a/docs/_assets/main.css
+++ b/docs/_assets/main.css
@@ -914,6 +914,7 @@ code[class*=language-], pre[class*=language-] {
   .started .mdl-tabs__tab-bar {
     margin-left: -40px;
     margin-right: -40px;
+    justify-content: center;
   }
   .started .mdl-tabs__tab {
     padding: 0 3%;
